--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-hook-form": "^7.58.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
-    "zod": "^3.25.64"
+    "zod": "^3.25.64",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
